--- a/app/src/app/component/component.component.html
+++ b/app/src/app/component/component.component.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 </div> -->
-
+<button (click)=startgame()>startgame</button> {{timeLeft}} Seconds Left....
 <table style="width: 100%">
     <tr>
         <td>
